--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>新たなキャリアに挑戦するなら「株式会社ミショナ」で！積極採用中</title>
   <link rel="icon" href="./img/logo-missiona_m.png">
 
-  <link rel=”stylesheet” href=”https://pilitech.github.io/missiona/css/reset.css”/>
-  <link rel=”stylesheet” href=”https://pilitech.github.io/missiona/css/style.css”/>
+  <link rel=”stylesheet” href=”https://pilitech.github.io/missiona/CSS/reset.css”/>
+  <link rel=”stylesheet” href=”https://pilitech.github.io/missiona/CSS/style.css”/>
 </head>
 <body>
   <header>
