--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>新たなキャリアに挑戦するなら「株式会社ミショナ」で！積極採用中</title>
   <link rel="icon" href="./img/logo-missiona_m.png">
 
-  <link rel=”stylesheet” href=”https://pilitech.github.io/missiona/CSS/reset.css/”>
-  <link rel=”stylesheet” href=”https://pilitech.github.io/missiona/CSS/style.css/”>
+  <link rel=”stylesheet” href=”https://github.com/pilitech/missiona/blob/c16929c505e048582797806646937aee63a8fdec/CSS/reset.css”>
+  <link rel=”stylesheet” href=”https://github.com/pilitech/missiona/blob/c16929c505e048582797806646937aee63a8fdec/CSS/style.css”>
 </head>
 <body>
   <header>
