--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>新たなキャリアに挑戦するなら「株式会社ミショナ」で！積極採用中</title>
   <link rel="icon" href="./img/logo-missiona_m.png">
 
-  <link rel=”stylesheet” href=”./reset.css”>
-  <link rel=”stylesheet” href=”./style.css”>
+  <link rel=”stylesheet” href=”css/reset.css”>
+  <link rel=”stylesheet” href=”css/style.css”>
 </head>
 <body>
   <header>
